# serde-magnus

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs
src/de/: array_deserializer.rs  array_enumerator.rs  arrays.rs  deserializer.rs  enum_deserializer.rs  hash_deserializer.rs  mod.rs  variant_deserializer.rs
src/ser/: enums.rs  map_serializer.rs  mod.rs  seq_serializer.rs  serializer.rs  struct_serializer.rs  struct_variant_serializer.rs  tuple_variant_serializer.rs
tests/: deserializing_arrays.rs  deserializing_booleans.rs  deserializing_enums.rs  deserializing_floats.rs  deserializing_integers.rs  deserializing_maps.rs  deserializing_options.rs  deserializing_results.rs  deserializing_strings.rs  deserializing_structs.rs  deserializing_tuples.rs  deserializing_vecs.rs  serializing_arrays.rs  serializing_booleans.rs  serializing_enums.rs  serializing_floats.rs  serializing_integers.rs  serializing_maps.rs  serializing_options.rs  serializing_results.rs  serializing_strings.rs  serializing_structs.rs  serializing_tuples.rs  serializing_vecs.rs
