[package]
name = "serde_magnus"
version = "0.1.0"
edition = "2018"
authors = ["George Claghorn <georgeclaghorn@gmail.com>"]
repository = "https://github.com/georgeclaghorn/serde-magnus"
homepage = "https://github.com/georgeclaghorn/serde-magnus"
license = "MIT"

[dependencies]
serde = "1.0"
magnus = "0.4"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
magnus = { version = "0.4", features = ["embed"] }
