[package]
name = "serde_magnus"
version = "0.1.1"
description = "Serde integration for Magnus"
edition = "2018"
rust-version = "1.51"
authors = ["George Claghorn <georgeclaghorn@gmail.com>"]
repository = "https://github.com/georgeclaghorn/serde-magnus"
homepage = "https://github.com/georgeclaghorn/serde-magnus"
documentation = "https://docs.rs/serde_magnus"
license = "MIT"
readme = "README.md"
keywords = ["serde", "magnus", "ruby"]
categories = ["development-tools::ffi"]
exclude = [".gitignore", ".github"]

[dependencies]
serde = "1.0"
magnus = "0.4"
tap = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
magnus = { version = "0.4", features = ["embed"] }
