[package]
name = "serde_magnus"
version = "0.8.0"
description = "Serde integration for Magnus"
edition = "2018"
rust-version = "1.65"
authors = ["Joe Wilm <joe@jwilm.com>", "George Claghorn <georgeclaghorn@gmail.com>"]
repository = "https://github.com/OneSignal/serde-magnus"
homepage = "https://github.com/OneSignal/serde-magnus"
documentation = "https://docs.rs/serde_magnus"
license = "MIT"
readme = "README.md"
keywords = ["serde", "magnus", "ruby"]
categories = ["development-tools::ffi"]
exclude = [".gitignore", ".github"]

[dependencies]
serde = "1.0, <= 1.0.156"
magnus = "0.6.2"
rb-sys = "0.9, <= 0.9.81"
rb-sys-build = "0.9, <= 0.9.81"
tap = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
magnus = { version = "0.6.2", features = ["embed"] }
